Portföy optimizasyonu ve risk analizi projesi eklendi

--- a/.gitignore
+++ b/.gitignore
@@ -4,7 +4,6 @@ __pycache__/
 *$py.class
 *.so
 .Python
-env/
 build/
 develop-eggs/
 dist/
@@ -22,6 +21,9 @@ wheels/
 *.egg
 
 # Virtual Environment
+.env
+.venv
+env/
 venv/
 ENV/
 
@@ -30,6 +32,16 @@ ENV/
 .vscode/
 *.swp
 *.swo
+
+# Project specific
+*.csv
+*.png
+*.txt
+!requirements.txt
+
+# OS specific
+.DS_Store
+Thumbs.db
 
 # Environment variables
 .env
