--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,8 @@
-psycopg2-binary==2.9.9
-python-dotenv==1.0.0
-python-telegram-bot==20.8
-pandas==2.2.1
-pandas-ta==0.3.14b0
-yfinance==0.2.37
-schedule==1.2.1
-numpy==1.26.4
-investpy==1.0.8 
+pandas>=1.5.0
+numpy>=1.21.0
+scipy>=1.7.0
+matplotlib>=3.5.0
+seaborn>=0.11.0
+plotly>=5.3.0
+python-dotenv>=0.19.0
+yfinance>=0.2.0 
